# rustfs

./: Cargo.toml
crates/rustfs-disk-core/: Cargo.toml
crates/rustfs-disk-core/src/: constants.rs  endpoint.rs  error.rs  error_conv.rs  format.rs  lib.rs  traits.rs  types.rs  unified.rs
crates/rustfs-disk-local/: Cargo.toml
crates/rustfs-disk-local/src/: endpoint.rs  error_conv.rs  format.rs  fs.rs  lib.rs  local.rs  os.rs
crates/rustfs-disk-remote/: Cargo.toml
crates/rustfs-disk-remote/src/: lib.rs  remote.rs
docs/: todo.md
ecstore/: Cargo.toml
ecstore/src/disk/: adapter.rs  mod.rs
rustfs/src/storage/: options.rs
