[package]
name = "rustfs-disk-remote"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
rustfs-disk-core = { path = "../rustfs-disk-core" }
protos = { path = "../../common/protos" }
rustfs-filemeta = { path = "../filemeta" }
rustfs-rio = { path = "../rio" }

# External dependencies
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4" 